--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,9 @@
-@tailwind base;
+@layer tailwind {
+    @tailwind base;
+}
 @tailwind components;
 @tailwind utilities;
+
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -17,17 +20,30 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  /* color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.mantine-NavLink-root{
+    border-radius: 10px;
+}
+
+.mantine-NavLink-root:hover {
+    background-color: rgb(99 102 241 / 0.3) !important;
+    transition: all 300ms;
+}
+
+.mantine-Button-root {
+    width: 112px !important;
 }
